--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My GitHub Page</title>
+    <title>New GitHub</title>
 </head>
 <body>
     <h1>Hello World</h1>
-    <p>Welcome to my GitHub Page!</p>
+    <p>Welcome to my GitHub!</p>
 </body>
 </html>
